--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -9,10 +9,11 @@ video {
 
 
 .hero-container {
+  margin-top: 0;
   /* background: url('/images/bg1.jpg') center center/cover no-repeat; */
   /* background-attachment: fixed; */
   height: 100vh;
-  scroll-snap-align: start;
+
   width: 100%;
   display: flex;
   flex-direction: column;
